--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -7,8 +7,21 @@ body{
     background-color: grey;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+h1{
+    font-size: 3rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    position: fixed;
+    top: 50px;
+}
+span{
+    position: fixed;
+    top: 130px;
+    font-size: 2rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 #gameBoard{
     display: grid;
@@ -54,5 +67,22 @@ body{
     transition: transform .4s ease-in;
 }
 button{
+    position: fixed;
+    top: 130px;
+    width: 150px;
+    height: 50px;
     padding: 10px;
+    border-radius: 10px;
+    font-weight: 700;
+    font-size:1rem;
+    border: none;
+}
+@keyframes colorSwap {
+    from { background-color: rgb(255, 252, 252); }
+    to { background-color: black; }
+}
+button:hover{
+    cursor: pointer;
+    color: white;
+    animation: colorSwap 2s ease-out 2 alternate forwards;
 }
